@@ -29,13 +29,13 @@ case "$1" in
 		# Already existent files are not removed.
 		# Users will need to explicitly remove them and (re-) configure this package.
 		if test -e $libdir/libX11.so.6; then
-			ln -s $libdir/libX11.so.6 /usr/lib/nx/X11/Xinerama/libNX_X11.so.6
+			ln -sf $libdir/libX11.so.6 /usr/lib/nx/X11/Xinerama/libNX_X11.so.6
 		fi
 		if test -e $libdir/libXext.so.6; then
-			ln -s $libdir/libXext.so.6 /usr/lib/nx/X11/Xinerama/libNX_Xext.so.6
+			ln -sf $libdir/libXext.so.6 /usr/lib/nx/X11/Xinerama/libNX_Xext.so.6
 		fi
 		if test -e $libdir/libNX_Xinerama.so.1; then
-			ln -s $libdir/libNX_Xinerama.so.1 /usr/lib/nx/X11/Xinerama/libXinerama.so.1
+			ln -sf $libdir/libNX_Xinerama.so.1 /usr/lib/nx/X11/Xinerama/libXinerama.so.1
 		fi
 	;;
 
