@@ -11,6 +11,7 @@ nx-libs (2:3.5.0.33-0x2go1) UNRELEASED; urgency=low
   * debian/libxinerama1.postinst.in:
     + Revert 5a9f829. Make sure libnx-Xinerama1 based Xinerama works
       again with X2Go on Debian based systems. 
+    + Enforce symlink creation for Xinerama et al. library symlinks.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Sat, 04 Jul 2015 06:29:19 +0200
 
